servicePh.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: pharmacy-ns
  name: servicePh
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: pharmacy-app
